--- a/css/styles.css
+++ b/css/styles.css
@@ -2,9 +2,32 @@ body {
     font-family: 'Montserrat';
 }
 
+/* #title, #pricing, #testimonials, #features, #press {
+    display: none;
+} */
+
+h1 {
+    font-family: "Montserrat", sans-serif;   
+    font-weight: 900;
+    font-size: 3.5rem;
+    line-height: 1.5;
+}
+
 h2 {
     font-family: "Montserrat", sans-serif;
-    font-weight: 900;
+    font-size: 3rem;
+    font-weight: bold;
+    line-height: 1.5;
+}
+
+h3 {
+    font-family: "Montserrat", sans-serif;
+    font-weight: bold;
+    font-size: 1.5rem;
+}
+
+p {
+    color: #8f8f8f;
 }
 
 #title {
@@ -16,13 +39,7 @@ h2 {
     padding: 3% 15% 7%;
 }
 
-#title h1 {
-    font-family: "Montserrat", sans-serif;
-    font-weight: 900;
 
-    font-size: 3.5rem;
-    line-height: 1.5;
-}
 
 /* Navigation Bar */
 
@@ -66,10 +83,7 @@ h2 {
     background: #fff;
     position: relative;
 }
-#features h3 {
-    font-family: "Montserrat", sans-serif;
-    font-weight: 900;
-}
+
 
 .feature-box {
     text-align: center;
@@ -131,6 +145,33 @@ h2 {
 
 .pricing-column {
     padding: 3% 2%;
+}
+
+
+/* Call to Action */
+#cta {
+    background-color: #ff4c68;
+    text-align: center;
+    padding: 7% 15%;
+    color: #fff;
+}
+
+#cta h3 {
+    font-size: 3.5rem;
+    line-height: 1.5;
+}
+
+#footer {
+    text-align: center;
+    padding: 7% 15%;
+}
+
+.social-icons {
+    margin-bottom: 20px;
+}
+
+.social { 
+    margin: 10px 20px;
 }
 
 @media (max-width: 1028px) {
